[tool.poetry]
name = "web2-0-homework-11"
version = "0.1.0"
description = ""
authors = ["AndrewCheUA <andreicheban@gmail.com>"]
readme = "README.md"
packages = [{include = "web2"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
psycopg2 = "^2.9.5"
sqlalchemy = "^2.0.4"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
alembic = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
